--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npm install",
+    "serve": "npm run build && node server.js"
+
   },
   "author": "jatin",
   "license": "ISC",
