--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5",
+    "streamifier": "^0.1.1",
     "web-push": "^3.6.7"
   },
   "devDependencies": {
