--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "busboy": "^1.6.0",
-    "cloudinary": "^2.4.0",
+    "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "socket.io": "^4.7.5",
     "streamifier": "^0.1.1",
     "web-push": "^3.6.7"
